tests/compile_fail/match_void_ok_takes_arg_fail.cpp
#include <feer/result.hpp>

int main() {
    feer::Result<void> value;

    auto out = value.match(
        [](int) {
            return 1;
        },
        [](const feer::Err&) {
            return 0;
        });

    (void)out;
    return 0;
}
